<resources>
    <string name="app_name">DeliveryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">You have to login with your Google account!</string>
    <string name="history_job">Jobs earlier</string>
    <string name="in_progress_job">In progress</string>
    <string name="map_job">Jobs on map</string>
    <string name="search_job">Jobs available</string>
    <string name="client_id">408596429373-abarp5hbqjns2hdi046fg850a12ic1fh.apps.googleusercontent.com</string>
    <string name="user_details">User details</string>
    <string name="job_details">Job details</string>
    <string name="submit">Submit</string>
    <string name="vehicle_data">Vehicle data</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_year">Vehicle Year</string>
    <string name="vehicle_plate">Vehicle Plate</string>
    <string name="vehicle_width_capacity">Vehicle Width capacity</string>
    <string name="vehicle_length_capacity">Vehicle Length Capacity</string>
    <string name="vehicle_height_capacity">Vehicle Height Capacity</string>
    <string name="vehicle_weight_capacity">Vehicle Weight Capacity</string>
    <string name="vehicle_location">Vehicle Location</string>
    <string name="save_vehicle">Save Vehicle</string>
    <string name="make_a_contract">Make a contract</string>
    <string name="status">Status</string>
    <string name="phone">Phone</string>
    <string name="sms">Sms</string>
    <string name="email">Email</string>
    <string name="mark_as_ready">Mark as ready</string>
    <string name="mark_as_in_transit">Mark as in transit</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_label">Date:</string>
    <string name="price_label">Price:</string>
    <string name="location_label">Location:</string>
    <string name="profile">Profile</string>
    <string name="my_vehicle">My vehicle</string>
    <string name="vehicle">Vehicle</string>
    <string name="no_vehicle_label">You have no vehicles, so you can add one to your profile with the button below.</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="type">Type</string>
    <string name="year">Year</string>
    <string name="storage_size">Storage size</string>
    <string name="storage_capacity">Storage capacity</string>
    <string name="park_location">Park location</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="type_label">Type:</string>
    <string name="year_label">Year:</string>
    <string name="empty">Empty</string>
    <string name="success">Success</string>
    <string name="vehicle_added">Vehicle successfully added</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="in_pending">Now it\'s in pending status</string>
    <string name="need_permission">You have to grant the permissions to start the delivery!</string>
    <string name="marked_as_in_transit">Delivery marked as in transit</string>
    <string name="marked_as_ready">Delivery marked as ready</string>
    <string name="user_rated">User successfully rated</string>
    <string name="vehicle_capacity">width: %1$s x length: %2$s x height: %3$s</string>
    <string name="vehicle_capacity_weight">%1$s kg</string>
    <string name="delivery_status">Status: %1$s - %2$s</string>
</resources>