<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/vehicle_data"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_type"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarMenu">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_year"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehicleType">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehiclePlate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/vehicle_plate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etVehicleYear">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_width_capacity"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:inputType="number"
            app:suffixText="cm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehiclePlate">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_length_capacity"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:inputType="number"
            app:suffixText="cm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehicleWidth">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_height_capacity"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:inputType="number"
            app:suffixText="cm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehicleLength">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_weight_capacity"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:inputType="number"
            app:suffixText="kg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehicleHeight">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etVehicleLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_location"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehicleWeight">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/btnAddVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_vehicle"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etVehicleLocation"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

