<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_menu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSearchJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivSearchJob"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/menu_image_size"
                    android:layout_height="@dimen/menu_image_size"
                    android:src="@drawable/ic_search_job" />

                <TextView
                    android:id="@+id/tvSearchJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/search_job"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                    app:layout_constraintEnd_toEndOf="@+id/ivSearchJob"
                    app:layout_constraintStart_toStartOf="@+id/ivSearchJob" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMapJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivMapJob"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/menu_image_size"
                    android:layout_height="@dimen/menu_image_size"
                    android:src="@drawable/ic_map" />

                <TextView
                    android:id="@+id/tvMapJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/map_job"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                    app:layout_constraintEnd_toEndOf="@+id/ivSearchJob"
                    app:layout_constraintStart_toStartOf="@+id/ivSearchJob" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvInProgressJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivInProgressJob"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/menu_image_size"
                    android:layout_height="@dimen/menu_image_size"
                    android:src="@drawable/ic_in_progress" />

                <TextView
                    android:id="@+id/tvInProgressJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/in_progress_job"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                    app:layout_constraintEnd_toEndOf="@+id/ivSearchJob"
                    app:layout_constraintStart_toStartOf="@+id/ivSearchJob" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvHistoryJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivHistoryJob"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/menu_image_size"
                    android:layout_height="@dimen/menu_image_size"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:id="@+id/tvHistoryJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/history_job"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                    app:layout_constraintEnd_toEndOf="@+id/ivSearchJob"
                    app:layout_constraintStart_toStartOf="@+id/ivSearchJob" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
